[package]
name = "tonic-st-lb-test"
version = "0.1.0"
edition = "2021"
description = "Tonic single threaded load balanced test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = "0.7.2"
tokio = { version = "1.18.2", features = ["full"] }
prost = "0.10.3"
futures = "0.3.21"
atomic-counter = "1.0.1"
clap = {version = "3.1.17", features = ["derive"]}

[build-dependencies]
tonic-build = "0.7.2"